--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_svg: ^0.23.0+1
   get: ^4.3.8
+  flutter_native_splash: ^1.3.1    
+  youtube_explode_dart: ^1.10.8
+  permission_handler: ^8.2.6
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +49,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.0  
 
+# ? splash screen
+flutter_native_splash:
+  color: "#280002"
+  image: lib/assets/images/icon.png
+  android: true  
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
