--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,12 @@ dependencies:
   get: ^4.3.8
   flutter_native_splash: ^1.3.1    
   youtube_explode_dart: ^1.10.8
-  permission_handler: ^8.2.6
+  permission_handler: ^8.2.6  
+  flutter_launcher_icons: ^0.9.2  
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,6 +57,10 @@ flutter_native_splash:
   color: "#280002"
   image: lib/assets/images/icon.png
   android: true  
+# ? icon launcher
+flutter_icons:
+  image_path : "lib/assets/images/icon_launcher.png"
+  android : true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -68,8 +73,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - lib/assets/images/icon.svg
+  assets:    
+    - lib/assets/images/icon_launcher.png
+    - lib/assets/images/icon.png
     # - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
